# consejos-transparentes-api

./: .gitignore  README.md  crud.py  ejemplos.py  gunicorn.service  init_db.py  main.py  model.py  pyproject.toml  schema.py  sheets.py  tasks.py  test.py  test.py.bak
configs/: gunicorn.socket
