[tool.poetry]
name = "consejos-transparentes-api"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agucova@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.60.1"}
sqlalchemy = "^1.3.18"
google-api-python-client = "^1.10.0"
google-auth = "^1.20.1"
google-auth-oauthlib = "^0.4.1"
pandas = "^1.1.0"
pprint = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
